# konversi-data

./: .env.example  .gitignore  CRITICAL_FIX.md  DEBUG_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_FIX.md  DEVELOPMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  ENV_CONFIGURATION_SUMMARY.md  GITIGNORE_UPDATE.md  KONVERSI_RUST_SUMMARY.md  PRODUCTION_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  QUICK_DEBUG.md  QUICK_START.md  README.md  SERVER_DEPLOYMENT.md  STRUKTUR_PROJECT.md  TROUBLESHOOTING.md  UNTUK_ERROR_KONVERSI_GAGAL.md  debug-backend.sh  deploy.sh  dev.sh  docker-compose.yml  pyproject.toml  test-docker.sh
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  main.py
backend-express/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
backend-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  QUICK_START.md  README.md  docker-entrypoint.sh
backend-rust/src/: database.rs  handlers.rs  main.rs  models.rs  utils.rs
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
test_data/: sample.csv  sample.json
