[project]
name = "konversi-data"
version = "0.1.0"
description = "Aplikasi konversi data JSON/CSV ke Excel dengan FastAPI dan DuckDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "duckdb>=1.1.0",
    "python-dotenv>=1.0.0",
]
