[package]
name = "konversi-data-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV processing
csv = "1.3"
csv-async = { version = "1.3", features = ["tokio"] }

# Excel generation
rust_xlsxwriter = "0.79"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for random filenames
uuid = { version = "1.10", features = ["v4", "serde"] }

# Utilities
futures-util = "0.3"
bytes = "1.7"

# Environment variables
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
